# itglue-superops-migrator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  analyze_customer_structure.py  config.example.yaml  docker-compose.yml  docker-migrate.sh  get_kb_collection.py  introspect_kb_item_query.py  migrate_all_to_staging.py  pyproject.toml  requirements.txt  retrieve_kb_article.py  setup_env.py  staging_migration.py
.claude-flow/metrics/: performance.json  task-metrics.json
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
docs/: SETUP_GUIDE.md  SUMMARY_FOR_REVIEW.md  email_to_superops.md  sample_api_calls.md  superops_migration_errors.md
migrator/: __init__.py  cli.py  config.py  logging.py
migrator/api/: __init__.py  graphql_client.py  rest_client.py
migrator/core/: __init__.py  database.py  orchestrator.py
migrator/parsers/: __init__.py  csv_parser.py  html_parser.py
migrator/transformers/: __init__.py  content_transformer.py
migrator/utils/: __init__.py  errors.py  progress.py
tests/api_testing/: create_debug_package.py  introspect_enums.py  introspect_visibility_type.py
